# reference

./: CMakeLists.txt
cmake/: FindGRPC.cmake  FindProtobuf.cmake
rpc/gnmi/: Makefile
rpc/gnmi/src/: gnmi_client  gnmi_client.cpp  gnmi_client.hpp  gnmi_server  gnmi_server.cpp
src/: gnmi_client.cpp  gnmi_client.hpp
